--- a/react-timeline/package.json
+++ b/react-timeline/package.json
@@ -4,37 +4,29 @@
   "private": true,
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@tailwindcss/cli": "^4.1.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.9.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build:tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "build": "npm run build:tailwind:prod && react-scripts build",
-    "build:tailwind:prod": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
+    "build:tailwind": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "cd server && npm run dev",
-    "server:prod": "cd server && npm start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -53,10 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^3.4.17"
   }
 }
