--- a/react-timeline/package.json
+++ b/react-timeline/package.json
@@ -18,7 +18,6 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   }
 }
